--- a/config/database.yml
+++ b/config/database.yml
@@ -9,26 +9,24 @@
 #  pool: 5
 #  timeout: 5000
 
+# development:
+#    adapter: postgresql
+#    encoding: unicode
+#    database: tailor_made_africa
+#    pool: 5
+#    username: postgres
+#    password: postgres
+#    host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
+
+
 development:
-   adapter: postgresql
-   encoding: unicode
-   database: tailor_made_africa
-   pool: 5
-   username: postgres
-   password: postgres
-   host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_development?') %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-#test:
-#  adapter: sqlite3
-#  database: db/test.sqlite3
-#  pool: 5
-#  timeout: 5000
+test:
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_test?') %>
 
-#production:
-#  adapter: sqlite3
-#  database: db/production.sqlite3
-#  pool: 5
-#  timeout: 5000
+staging:
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_staging?') %>
+
+production:
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_production?') %>
