--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,18 @@ services:
   app:
     build: .
     environment:
-      DATABASE_HOST: db
+      RAILS_ENV: development
+      RAKE_ENV: development
       DATABASE_URL: postgresql://postgres:tma@db:5432/postgres?encoding=utf8&pool=5&timeout=5000
     volumes:
       - .:/app
     ports:
-      - "1080:1080"
+      - "8080:8080"
     depends_on:
       - db
     stdin_open: true
     tty: true
-    command: "bundle exec rails server -p 1080 --pid /server.pid"
+    command: "bundle exec rails server -p 8080 -b 0.0.0.0 --pid /server.pid"
   db:
     image: postgres:9.4-alpine
     restart: always
@@ -21,4 +22,14 @@ services:
       POSTGRES_PASSWORD: tma
     volumes:
       - .docker-data/db:/var/lib/postgresql
-
+    ports:
+      - 5432:5432
+  pgadmin: 
+    image: 'dpage/pgadmin4'
+    depends_on:
+      - db
+    ports: 
+      - '80:80'
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "user@domain.com"
+      PGADMIN_DEFAULT_PASSWORD: "password"
