--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db
     stdin_open: true
     tty: true
-    command: "bundle exec rails server -p 8080 -b 0.0.0.0 --pid /server.pid"
+    command: "bundle exec puma -C config/puma.rb"
   db:
     image: postgres:9.4-alpine
     restart: always
@@ -22,14 +22,3 @@ services:
       POSTGRES_PASSWORD: tma
     volumes:
       - .docker-data/db:/var/lib/postgresql
-    ports:
-      - 5432:5432
-  pgadmin: 
-    image: 'dpage/pgadmin4'
-    depends_on:
-      - db
-    ports: 
-      - '80:80'
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "user@domain.com"
-      PGADMIN_DEFAULT_PASSWORD: "password"
