--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       RAILS_ENV: development
       RAKE_ENV: development
       DATABASE_URL: postgresql://postgres:tma@db:5432/postgres?encoding=utf8&pool=5&timeout=5000
+      GOOGLE_RECAPTCHA_SITE_KEY: 6LcMxosUAAAAABCUfL8b5k1rlkzha75U0lgCOZxW
+      GOOGLE_RECAPTCHA_SECRET_KEY: 6LcMxosUAAAAAPlC2r2b5PhlNdp8hY4ls03BKEfx
+      GOOGLE_RECAPTCHA_MINIMUM_SCORE: 0.5
     volumes:
       - .:/app
     ports:
